<resources>
    <string name="app_name">LinguApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description_flags">welcome screen graphics</string>

    <string name="text_register">Zarejestruj się</string>
    <string name="text_login">Logowanie</string>

    <string name="hint_username">nazwa użytkownika</string>
    <string name="hint_mail">e-mail</string>
    <string name="hint_re_mail">powtórz e-mail</string>
    <string name="hint_password">hasło</string>
    <string name="hint_re_password">powtórz hasło</string>

    <string name="text_register_incentive_question">Nie masz konta?</string>
    <string name="text_register_incentive_order">Zarejestruj się!</string>
    <string name="text_login_incentive">Jeśli masz już konto, zaloguj się!</string>

    <string name="button_register_nav">Rejestracja</string>
    <string name="button_login_nav">Logowanie</string>

    <string name="button_login">zaloguj</string>
    <string name="button_confirm">zatwierdź</string>

    <string name="button_translate_words">tłumacz</string>
    <string name="button_saved_translations_section">zapisane słówka</string>
    <string name="button_learn_section">nauka</string>
    <string name="button_open_site_to_translate">otwórz w przeglądarce</string>

    <string name="text_original_lang">język oryginalny</string>
    <string name="text_target_lang">język docelowy</string>
    <string name="button_translate">tłumacz</string>
    <string name="button_save_translation">zapisz tłumaczenie</string>
    <string name="prompt_input_text_to_translation">tekst do tłumaczenia…</string>
    <string name="prompt_translated_text">tłumaczenie</string>
    <string name="description_translation_arrows">strzałki wskazujące kierunek tłumaczenia</string>

    <string name="text_chose_learning_language">Wybierz język do nauki</string>
    <string name="text_english">angielski</string>
    <string name="text_russian">rosyjski</string>
    <string name="text_spanish">hiszpański</string>

    <string name="text_pick_learning_method">Wybierz czego chcesz się uczyć</string>
    <string name="button_quiz">kartkówka</string>
    <string name="button_abc">ABC</string>
    <string name="button_lessons">lekcje</string>
    <string name="hint_translation">tłumaczenie…</string>

    <string name="toast_message_incorrect_credentials">Podane dane są nieprawidłowe</string>
    <string name="toast_internal_error">Wystąpił problem… ):</string>
    <string name="toast_fill_all_fields">Wypełnij wszystkie pola!</string>
    <string name="toast_taken_username">Użytkownik o takiej nazwie już istnieje!</string>
    <string name="toast_translation_error">Wystąpił problem…</string>
    <string name="button_logout">Wyloguj</string>
    <string name="text_settings">ustawienia</string>
    <string name="text_logout">wyloguj</string>
    <string name="label_fragment_translation">Tłumaczenie</string>
    <string name="label_fragment_main_menu">Menu główne</string>
    <string name="label_fragment_choose_language">Języki</string>
    <string name="label_fragment_methods">Metody nauczania</string>
    <string name="text_polish">polski</string>
    <string name="label_fragment_settings">Ustawienia</string>
    <string name="settings_server_ip_text">IP serwera</string>
    <string name="settings_server_ip_key">serverIp</string>
    <string name="settings_server_ip_default">http://35.228.203.189:5001/</string>
    <string name="file_name_preferences">LinguAppPreferencesFile</string>
    <string name="placeholder_saved_translation_lang">język</string>
    <string name="placeholder_saved_translation_src">Tekst źródłowy</string>
    <string name="placeholder_saved_translation_dst">Tekst przetłumaczony</string>
    <string name="label_fragment_saved_translations">Zapisane słówka</string>
    <string name="toast_saved">Zapisano!</string>
    <string name="text_translate_it">Przetłumacz:</string>
    <string name="button_finish">zakończ</string>
    <string name="hint_translate_it">tłumaczenie…</string>
    <string name="text_your_score">Twój wynik to:</string>
    <string name="description_face">ikona twarzy</string>
    <string name="button_return">powrót</string>
    <string name="placeholder_percentage">99 %</string>
    <string name="placeholder_quiz_end_message">Świetny wynik!</string>
    <string name="label_quiz">Quiz</string>
    <string name="text_quiz_result_average">Jest dobrze, ale musisz jeszcze poćwiczyć</string>
    <string name="text_quiz_result_bad">Przed Tobą jeszcze dużo pracy…</string>
    <string name="text_quiz_result_good">Wspaniale! Tak trzymaj!</string>
    <string name="label_quiz_result">Wyniki</string>
    <string name="not_implemented">Ta funkcja nie została jeszcze zaimplementowana</string>
    <string name="button_quiz_answers">Zobacz odpowiedzi</string>
    <string name="text_your_answer">Twoja odpowiedź:</string>
    <string name="text_correct_answer">Poprawna odpowiedź:</string>
    <string name="placeholder_answear">odpowiedź</string>
    <string name="label_quiz_answers">Odpowiedzi</string>
    <string name="label_abc_quiz">Quiz ABC</string>
    <string name="label_lessons">Lekcje</string>
    <string name="placeholder_title">Tytuł</string>
    <string name="placeholder_lesson_content">"Tekst lekcji…"</string>
    <string name="placeholder_question">Pytanie…</string>
    <string name="placeholder_abcd_answer">odpowiedz typu wybierz jedno…</string>
    <string name="toast_wait_for_translation">Poczekaj na tłumaczenie!</string>
</resources>
