<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_menu"
    app:startDestination="@id/menuMain">

    <fragment
        android:id="@+id/menuMain"
        android:name="pl.ourdomain.tlumaczenia.controllers.MainMenuFragment"
        android:label="@string/label_fragment_main_menu"
        tools:layout="@layout/fragment_menu_main">
        <action
            android:id="@+id/action_menuMain_to_quickTranslation"
            app:destination="@id/quickTranslation" />
        <action
            android:id="@+id/action_menuMain_to_choseLanguage"
            app:destination="@id/choseLanguage" />
    </fragment>
    <fragment
        android:id="@+id/quickTranslation"
        android:name="pl.ourdomain.tlumaczenia.controllers.QuickTranslationFragment"
        android:label="@string/label_fragment_translation"
        tools:layout="@layout/fragment_translation" />
    <fragment
        android:id="@+id/choseLanguage"
        android:name="pl.ourdomain.tlumaczenia.controllers.ChoseLanguageFragment"
        android:label="@string/label_fragment_choose_language"
        tools:layout="@layout/fragment_menu_main">
        <action
            android:id="@+id/action_choseLanguage_to_learningMethods"
            app:destination="@id/learningMethods" />
    </fragment>
    <fragment
        android:id="@+id/learningMethods"
        android:name="pl.ourdomain.tlumaczenia.controllers.LearningMethodsFragment"
        android:label="@string/label_fragment_methods"
        tools:layout="@layout/fragment_menu_main" />
</navigation>