<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/masterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/col_main_app_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/translationLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/col_main_app_theme">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/spinnersScene"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Spinner
                        android:id="@+id/langSpinner"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/rounded_button"
                        android:popupBackground="@drawable/rounded_button"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/swapArrows"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/swapArrows"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="193dp"
                        android:layout_marginEnd="192dp"
                        android:contentDescription="@string/description_translation_arrows"
                        app:layout_constraintBottom_toBottomOf="@+id/langSpinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/langSpinner"
                        app:srcCompat="@drawable/ic_translation_arrows" />

                    <TextView
                        android:id="@+id/langText"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/rounded_text_field"
                        android:gravity="center"
                        android:text="@string/text_polish"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        app:layout_constraintBottom_toBottomOf="@+id/langSpinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/swapArrows"
                        app:layout_constraintTop_toTopOf="@+id/langSpinner"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/srcLangLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/rounded_text_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/text_original_lang"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/srcText"
                    app:layout_constraintStart_toStartOf="@+id/srcText" />

                <EditText
                    android:id="@+id/srcText"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_input_field"
                    android:ems="10"
                    android:fontFamily="@font/lora"
                    android:gravity="start|top"
                    android:hint="@string/prompt_input_text_to_translation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnersScene" />

                <TextView
                    android:id="@+id/dstText"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_input_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/hint_translation"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/srcText" />

                <TextView
                    android:id="@+id/dstLangLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/rounded_text_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/text_target_lang"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/dstText"
                    app:layout_constraintStart_toStartOf="@+id/dstText" />

                <Button
                    android:id="@+id/translateButton"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/lora"
                    android:text="@string/button_translate"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/saveTranslationButton"
                    app:layout_constraintEnd_toEndOf="@+id/saveTranslationButton"
                    app:layout_constraintTop_toBottomOf="@+id/dstText" />

                <Button
                    android:id="@+id/saveTranslationButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/lora"
                    android:text="@string/button_save_translation"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>