<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/col_main_app_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/col_main_app_theme">


                <Spinner
                    android:id="@+id/originalLangSpinner"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_button"
                    android:popupBackground="@drawable/rounded_button"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/targetLangSpinner"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_button"
                    android:popupBackground="@drawable/rounded_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/originalLangText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/rounded_text_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/text_original_lang"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/translateThisText"
                    app:layout_constraintStart_toStartOf="@+id/translateThisText" />

                <EditText
                    android:id="@+id/translateThisText"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_input_field"
                    android:ems="10"
                    android:fontFamily="@font/lora"
                    android:gravity="start|top"
                    android:hint="@string/prompt_input_text_to_translation"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="5dp"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/originalLangSpinner" />

                <TextView
                    android:id="@+id/translatedText"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/rounded_input_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/hint_translation"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/translateThisText" />

                <TextView
                    android:id="@+id/translatedLangText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/rounded_text_field"
                    android:fontFamily="@font/lora"
                    android:padding="5dp"
                    android:text="@string/text_target_lang"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/translatedText"
                    app:layout_constraintStart_toStartOf="@+id/translatedText" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_translation_arrows"
                    app:layout_constraintBottom_toBottomOf="@+id/originalLangSpinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/originalLangSpinner"
                    app:srcCompat="@drawable/ic_translation_arrows" />

                <Button
                    android:id="@+id/translateButton"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/lora"
                    android:text="@string/button_translate"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toTopOf="@+id/saveTranslationButton"
                    app:layout_constraintEnd_toEndOf="@+id/saveTranslationButton"
                    app:layout_constraintTop_toBottomOf="@+id/translatedText" />

                <Button
                    android:id="@+id/saveTranslationButton"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/lora"
                    android:text="@string/button_save_translation"
                    android:textColor="@color/colorText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>